<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright 2014 Sheldon Neilson www.neilson.co.za

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.

 I modified part of the contents in Korean.
 In addition, the menu was added in the scope without erasing the contents.
The source of this source is "https://github.com/SheldonNeilson/Android-Alarm-Clock.git"

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:layout_weight="1"
                android:textSize="25sp"
                tools:text="Math Question"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="="
                android:textSize="25dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="center_vertical|start"
                android:layout_weight="1"
                android:textSize="25sp"
                tools:text="Math Answer"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/Button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:layout_marginRight="10dp"
                        android:text="@string/_1"
                        android:layout_weight="1"
                        android:tag="1"/>

                    <Button
                        android:id="@+id/Button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:layout_marginRight="10dp"
                        android:text="@string/_2"
                        android:layout_weight="1"
                        android:tag="2"/>

                    <Button
                        android:id="@+id/Button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:text="@string/_3"
                        android:layout_weight="1"
                        android:tag="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/Button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:layout_marginRight="10dp"
                        android:text="@string/_4"
                        android:layout_weight="1"
                        android:tag="4"/>

                    <Button
                        android:id="@+id/Button5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:layout_marginRight="10dp"
                        android:text="@string/_5"
                        android:layout_weight="1"
                        android:tag="5"/>

                    <Button
                        android:id="@+id/Button6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:text="@string/_6"
                        android:layout_weight="1"
                        android:tag="6"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/Button7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:layout_marginRight="10dp"
                        android:text="@string/_7"
                        android:layout_weight="1"
                        android:tag="7"/>

                    <Button
                        android:id="@+id/Button8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:layout_marginRight="10dp"
                        android:text="@string/_8"
                        android:layout_weight="1"
                        android:tag="8"/>

                    <Button
                        android:id="@+id/Button9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:text="@string/_9"
                        android:layout_weight="1"
                        android:tag="9"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/Button_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:layout_marginRight="10dp"
                        android:text="@string/clear_button_text"
                        android:layout_weight="1"
                        android:tag = "clear"/>

                    <Button
                        android:id="@+id/Button0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:layout_marginRight="10dp"
                        android:text="@string/_0"
                        android:layout_weight="1"
                        android:tag="0"/>

                    <Button
                        android:id="@+id/Button_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorSkyBlue"
                        android:textColor="@color/colorWhite"
                        android:text="@string/minus_button_text"
                        android:layout_weight="1"
                        android:tag="-"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>